validate: Reshape documentation
Fix some errors, use more Docbook tags and split each command reference
in its own file.

https://bugzilla.gnome.org/show_bug.cgi?id=749162

--- a/validate/docs/validate/Makefile.am
+++ b/validate/docs/validate/Makefile.am
@@ -77,7 +77,7 @@ IGNORE_CFILES = \
 # HTML_IMAGES = gdp-header.png
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE).
-content_files = scenarios.xml command-line-tools.xml envvariables.xml
+content_files = gst-validate.xml gst-validate-transcoding.xml gst-validate-media-check.xml gst-validate-launcher.xml envvariables.xml scenarios.xml
 
 # Other files to distribute.
 extra_files =
