--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -6,5 +6,4 @@ endif
 
 DIST_SUBDIRS = reference
 
-# Extra clean files so that maintainer-clean removes *everything*
-MAINTAINERCLEANFILES = Makefile.in
+-include $(top_srcdir)/git.mk
