--- a/gst-libs/gst/codecparsers/Makefile.am
+++ b/gst-libs/gst/codecparsers/Makefile.am
@@ -107,5 +107,4 @@ EXTRA_DIST = gstvaapilibvpx.c
 
 DISTCLEANFILES = $(GENFILES) .timestamp.symlinks
 
-# Extra clean files so that maintainer-clean removes *everything*
-MAINTAINERCLEANFILES = Makefile.in
+-include $(top_srcdir)/git.mk
