--- a/patches/videoparsers/Makefile.am
+++ b/patches/videoparsers/Makefile.am
@@ -2,5 +2,4 @@ include series.frag
 
 EXTRA_DIST = series.frag $(videoparsers_patches_base)
 
-# Extra clean files so that maintainer-clean removes *everything*
-MAINTAINERCLEANFILES = Makefile.in
+-include $(top_srcdir)/git.mk
