--- a/debian.upstream/Makefile.am
+++ b/debian.upstream/Makefile.am
@@ -39,5 +39,4 @@ EXTRA_DIST = $(DEBIANFILES)
 dist_noinst_DATA = $(DEBIANGENFILES)
 DISTCLEANFILES = $(DEBIANGENFILES)
 
-# Extra clean files so that maintainer-clean removes *everything*
-MAINTAINERCLEANFILES = Makefile.in $(DEBIANGENFILES)
+-include $(top_srcdir)/git.mk
