build: fix make distcheck
This patch fixes several issues found when running the `make distcheck`
target:

- In commit c561b8da, the update of gstcompat.h in Makefile.am was
  forgotten.
- In commit c5756a91 add the simple_encoder_source_h in EXTRA_DIST was
  forgotten.
- vpx.build.stamp is not generated at all, only vpx.configure.stamp.
- The make target distcleancheck failed because some autogenerated files
  were not handled with the DISTCLEANFILES variable.

Note: `make distcheck -jXX` is not currently supported.

--- a/debian.upstream/Makefile.am
+++ b/debian.upstream/Makefile.am
@@ -37,6 +37,7 @@ DEBIANGENFILES = \
 EXTRA_DIST = $(DEBIANFILES)
 
 dist_noinst_DATA = $(DEBIANGENFILES)
+DISTCLEANFILES = $(DEBIANGENFILES)
 
 # Extra clean files so that maintainer-clean removes *everything*
 MAINTAINERCLEANFILES = Makefile.in $(DEBIANGENFILES)
