--- a/gst/vaapi/Makefile.am
+++ b/gst/vaapi/Makefile.am
@@ -62,6 +62,7 @@ libgstvaapi_source_c = \
 	$(NULL)
 
 libgstvaapi_source_h = \
+	gstcompat.h		\
 	gstvaapidecode.h	\
 	gstvaapipluginbase.h	\
 	gstvaapipluginutil.h	\
