--- a/gst/vaapi/Makefile.am
+++ b/gst/vaapi/Makefile.am
@@ -81,12 +81,14 @@ libgstvaapi_enc_source_c =	\
 	gstvaapiencode.c	\
 	gstvaapiencode_h264.c	\
 	gstvaapiencode_mpeg2.c	\
+	gstvaapiencode_h265.c	\
 	$(NULL)
 
 libgstvaapi_enc_source_h =	\
 	gstvaapiencode.h	\
 	gstvaapiencode_h264.h	\
 	gstvaapiencode_mpeg2.h	\
+	gstvaapiencode_h265.h	\
 	$(NULL)
 
 if USE_ENCODERS
