error-ignore: New element to convert some GstFlowReturn types into others
Can be used to fix misbehaving sinks. It will pass through all buffers
until it encounters GST_FLOW_ERROR or GST_FLOW_NOT_NEGOTIATED (configurable).
At that point it will unref the buffers and return GST_FLOW_NOT_LINKED
(configurable) - until the next READY_TO_PAUSED or FLUSH_STOP.

https://bugzilla.gnome.org/show_bug.cgi?id=750098

--- a/gst/debugutils/Makefile.am
+++ b/gst/debugutils/Makefile.am
@@ -21,7 +21,8 @@ libgstdebugutilsbad_la_SOURCES = \
         gstchecksumsink.c \
 	gstchopmydata.c \
 	gstcompare.c \
-	gstwatchdog.c
+	gstwatchdog.c \
+	gsterrorignore.c
 
 nodist_libgstdebugutilsbad_la_SOURCES = $(BUILT_SOURCES)
 libgstdebugutilsbad_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
@@ -36,4 +37,5 @@ noinst_HEADERS = fpsdisplaysink.h \
 	gstchopmydata.h \
 	gstcompare.h \
 	gstdebugspy.h \
-	gstwatchdog.h
+	gstwatchdog.h \
+	gsterrorignore.h
