netclientclock: Add NTPv4 support
This uses all of the netclientclock code, except for the generation and
parsing of packets. Unfortunately some code duplication was necessary
because GstNetTimePacket is public API and couldn't be extended easily
to support NTPv4 packets without breaking API/ABI.

--- a/libs/gst/net/Makefile.am
+++ b/libs/gst/net/Makefile.am
@@ -17,9 +17,10 @@ libgstnet_@GST_API_VERSION@_la_SOURCES = \
     gstnetcontrolmessagemeta.c \
     gstnettimepacket.c \
     gstnettimeprovider.c \
-    gstptpclock.c
+    gstptpclock.c \
+    gstntppacket.c
 
-noinst_HEADERS = gstptp_private.h
+noinst_HEADERS = gstptp_private.h gstntppacket.h
 
 libgstnet_@GST_API_VERSION@_la_CFLAGS = $(GST_OBJ_CFLAGS) $(GIO_CFLAGS)
 libgstnet_@GST_API_VERSION@_la_LIBADD = $(GST_OBJ_LIBS) $(GIO_LIBS) \
