validate: Generate documentation for Validate plugins
Summary: Depends on D215

Reviewers: Mathieu_Du

Differential Revision: http://phabricator.freedesktop.org/D216

--- a/validate/configure.ac
+++ b/validate/configure.ac
@@ -331,6 +331,7 @@ launcher/apps/Makefile
 docs/Makefile
 docs/version.entities
 docs/validate/Makefile
+docs/plugins/Makefile
 docs/launcher/Makefile
 ])
 AC_OUTPUT
