--- a/validate/data/Makefile.am
+++ b/validate/data/Makefile.am
@@ -3,3 +3,5 @@ SUBDIRS = scenarios
 configdir=${datadir}/gstreamer-$(GST_API_VERSION)/validate/
 config_DATA = \
 	valgrind.config
+
+EXTRA_DIST = valgrind.config
