gtk: Add missing CFLAGS to example

--- a/tests/examples/gtk/Makefile.am
+++ b/tests/examples/gtk/Makefile.am
@@ -13,6 +13,8 @@ noinst_PROGRAMS += gtkglsink
 
 gtkglsink_SOURCES = gtkglsink.c
 gtkglsink_CFLAGS = $(GTK3_CFLAGS) \
+	$(GST_PLUGINS_BAD_CFLAGS) \
+	$(GST_PLUGINS_BASE_CFLAGS) \
 	$(GST_CFLAGS) \
 	$(GL_CFLAGS)
 gtkglsink_LDADD = $(GTK3_LIBS) \
