debugutilsbad: Minor cleanup
Ran gst-indent on debugutilsbad.c, moved headers to noinst in Makefile.am

--- a/gst/debugutils/Makefile.am
+++ b/gst/debugutils/Makefile.am
@@ -19,14 +19,9 @@ libgstdebugutilsbad_la_SOURCES = \
 	debugutilsbad.c \
         fpsdisplaysink.c \
         gstchecksumsink.c \
-	gstchecksumsink.h \
 	gstchopmydata.c \
-	gstchopmydata.h \
 	gstcompare.c \
-	gstcompare.h \
-	gstdebugspy.h \
-	gstwatchdog.c \
-	gstwatchdog.h
+	gstwatchdog.c
 
 nodist_libgstdebugutilsbad_la_SOURCES = $(BUILT_SOURCES)
 libgstdebugutilsbad_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
@@ -36,4 +31,9 @@ libgstdebugutilsbad_la_LIBADD = $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
 libgstdebugutilsbad_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstdebugutilsbad_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
 
-noinst_HEADERS = fpsdisplaysink.h
+noinst_HEADERS = fpsdisplaysink.h \
+	gstchecksumsink.h \
+	gstchopmydata.h \
+	gstcompare.h \
+	gstdebugspy.h \
+	gstwatchdog.h
